# hackathon

./: .env.template  .gitignore  Makefile  config.py  docker-compose.yaml  home.py  main.py  memory_graph.py  models.json.template  pyproject.toml  reset_database.py
alembic/: env.py
alembic/versions/: a4837e7fc4b8_added_initial_tables.py
chat/: __init__.py  chat.py  constants.py  main.py  memories_extraction.py  models.py  utils.py
tools/: __init__.py
tools/calendar/: README.md  __init__.py  day_for_date.py  get_cal_for_a_mon.py
utils/: __init__.py  models.py  normalize_uuid.py  prompt.py
utils/embeddings/: __init__.py  base.py  factory.py  openai.py
utils/llm/: __init__.py  base.py  factory.py  gemini.py  groq.py  openai.py  sambanova.py  together_ai.py
utils/milvus/: __init__.py  base.py  migrations.py  utils.py
utils/mongodb/: __init__.py  base.py  migrations.py  utils.py
utils/postgres/: __init__.py  base.py  schemas.py  utils.py
